get deal by id + front loan-actions
